[project]
name = "beets-mpd-utils"
version = "0.1.3"
description = "Beets plugins to interface with MPD"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3.0",
  "Topic :: Multimedia :: Sound/Audio :: Players",
  "Topic :: Utilities"
]
license = {file = "LICENSE"}
keywords = ["beets", "MPD", "music player daemon", "music"]

dependencies = [
  "beets >= 1.6.1",
  "python-mpd2 >= 3.0.0",
]

[project.urls]
Homepage = "https://github.com/thekakkun/beets-mpd-utils"
Repository = "https://github.com/thekakkun/beets-mpd-utils.git"

[tool.pylint.typecheck]
generated-members = [
  "beetsplug.mpd_dj.MPDQueue.add",
  "beetsplug.mpd_dj.MPDQueue.playlist",
  "beetsplug.mpd_dj.MPDQueue.random",
  "beetsplug.mpd_dj.MPDQueue.status",
  "beetsplug.mpd_tracker.MPDTracker.currentsong",
  "beetsplug.mpd_tracker.MPDTracker.status",
]

[tool.setuptools.packages.find]
where = ["src"]
