[project]
name = "beets-mpd-utils"
version = "0.3.4"
description = "Utilities for MPD integration with Beets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["beets>=2.3.1", "python-mpd2>=3.1.1"]

[dependency-groups]
dev = ["ruff>=0.12.8"]

[project.urls]
homepage = "https://github.com/thekakkun/beets-mpd-utils"
repository = "https://github.com/thekakkun/beets-mpd-utils.git"
